2006-01-06  Carl Worth  <cworth@cworth.org>

	Reviewed by keithp

	* src/cairo-paginated-surface.c: (_paint_page),
	(_cairo_paginated_surface_copy_page),
	(_cairo_paginated_surface_show_page): Change the paginated surface
	to force all output to come from an image surface (to be refined
	incrementally as we hook real surface backends up to it).

2006-01-06  Carl Worth  <cworth@cworth.org>

	Reviewed by keithp

	* src/cairo-paginated-surface.c: (_cairo_paginated_surface_create),
	(_cairo_paginated_surface_copy_page),
	(_cairo_paginated_surface_show_page): Implement copy_page for
	paginated surface. Fix show_page to destroy the meta-surface and
	create a new one.
	
	* src/cairoint.h:
	* src/cairo-surface.c: (_cairo_surface_copy_page),
	(_cairo_surface_show_page): Change these functions to advertise
	when they are not supported, so that _cairo_paginated_copy_page
	can implement things differently depending on whether or not it is
	personal.

	* src/cairo-gstate.c: (_cairo_gstate_copy_page),
	(_cairo_gstate_show_page): Check return values from
	_cairo_surface_show/copy_page.

2006-01-05  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Slip 1.2.0 projected data (again) out to
	2006-01-13. Note that win32 is now incorporated into the test
	suite and is only failing two tests (self-copy and
	trap-clip). Note new progress on cairo_push/pop_group. Add item to
	support pango's hex-box drawing. Note that gradient computation
	performance has been improved. Note that experimental SVG backend
	has been added.

2006-01-05  David Reveman  <davidr@novell.com>

	* src/cairo-svg-surface.c (emit_pattern_stops): Don't sort color stops.
	(emit_linear_pattern):
	(emit_radial_pattern): Track gradient changes.

	* src/cairo-pdf-surface.c (emit_pattern_stops): Don't sort color stops,
	cairo already keeps all color stops sorted.

	* src/cairo-glitz-surface.c (_cairo_glitz_pattern_acquire_surface):
	 Track gradient changes.

	* src/cairo-pdf-surface.c (emit_pattern_stops)