@@ -1,3 +1,7 @@
+2006-01-09  Carl Worth  <cworth@cworth.org>
+
+	* test/cairo-test.h: Add printf format attribute to cairo_test_log.
+
 2006-01-06  Carl Worth  <cworth@cworth.org>
 
 	Reviewed by keithp
